--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 	--black-1:	#202020;
 	--black-2:	#0A0A0A;
 	--black-3:	#000000;
+	--cyan: 		#2DE2E6;
 }
 
 
@@ -15,6 +16,10 @@
 	font-family: Roboto, Arial;
 	padding: 0;
 	margin: 0;
+}
+
+a {
+	text-decoration: none;
 }
 
 html, body {
