Cart & Payout page completed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 	--magenta-rgb: 211, 47, 135;
 	--red:		#FF3535;
 	--white-1:	#FFFFFF;
-	--white-2:	#F4F4F4;
+	--white-2:	#f4f4f4;
+	--white-2-rgb: 244, 244, 244;
 	--grey:		#999999;
 	--black-1:	#000000;
 	--black-2:	#0A0A0A;
